--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "node --watch --env-file=.env app.js",
+    "nodemon": "nodemon --env-file=.env app.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -13,13 +16,17 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.1",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
-    "v2": "^0.0.3"
+    "razorpay": "^2.9.6",
+    "v2": "^0.0.3",
+    "va": "^0.2.0",
+    "validator": "^13.15.15"
   }
 }
