--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "latest": "^0.2.0",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
