--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,10 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
-    "v2": "^0.0.3",
-    "va": "^0.2.0",
     "validator": "^13.15.15"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
