--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,5 +41,9 @@
   "main": "eslint.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+  "node": "22.x",
+  "npm": "10.x"
+}
 }
