Change node and npm version in package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,9 @@
   "main": "eslint.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+  "node": "18.x",
+  "npm": "9.x"
+}
 }
