--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,18 +23,18 @@
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11",
-    "tailwindcss-animated": "^2.0.0"
+    "tailwindcss-animated": "^2.0.0",
+    "vite": "^7.1.2",
+    "@vitejs/plugin-react": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "globals": "^16.3.0"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
